fixed card positioning on mobile

--- a/static/css/pretty.css
+++ b/static/css/pretty.css
@@ -795,5 +795,7 @@ i:hover{
 
 	.projectCard{
 		left: 5%;
+		min-width: 0px;
+		width: 90%;
 	}
 }
